func: add scrollbar; fix: refactor the SASS variables

--- a/apps/code-editor/src/sass/abstracts/_variables.scss
+++ b/apps/code-editor/src/sass/abstracts/_variables.scss
@@ -10,6 +10,8 @@ $dark: #343a40;
 $back: #ffffff;
 $text: #444;
 $heading: #222;
+$scrollbar-thumb-color: #d2d2d7;
+$mat-tab-indicator-color: #ff3e00;
 
 // Screen Sizes
 $screen-tablet1: 768px;
@@ -77,6 +79,8 @@ $sidebar-w: 30rem;
 $sidebar-mid-w: 36rem;
 $sidebar-large-w: 48rem;
 $sidebar-text: rgba(255, 255, 255, 0.9);
+$scrollbar-w: 8px;
+$scrollbar-border-radius: 4px;
 
 // Viewport
 $viewport-w: 100vw;
