--- a/apps/code-editor/src/sass/components/_mdc-tab.scss
+++ b/apps/code-editor/src/sass/components/_mdc-tab.scss
@@ -1,7 +1,5 @@
-$mat-tab-indicator-color: #ff3e00;
-
 .mdc-tab-indicator__content--underline {
-  --mdc-tab-indicator-active-indicator-color: #{$mat-tab-indicator-color};
+  --mdc-tab-indicator-active-indicator-color: #{$mat-tab-indicator-color} !important;
 }
 
 .mat-mdc-tab-labels {
