--- a/apps/code-editor/src/sass/layout/_sidebar.scss
+++ b/apps/code-editor/src/sass/layout/_sidebar.scss
@@ -27,8 +27,5 @@
 
   &__markup {
     padding: 3.2rem 4rem;
-    overflow: auto;
-    flex: 1;
-    height: 0;
   }
 }
